# xpp

./: .gitignore  AUTHORS.md  AUTHORS.txt  CMakeLists.txt  LICENSE  README.md  package.xml
robots/hyq/hyqb_description/: CMakeLists.txt  package.xml
robots/hyq/hyqb_description/urdf/: hyqb.urdf.xacro  leg.urdf.xacro  trunk.urdf.xacro
robots/hyq/monoped_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
robots/hyq/monoped_description/urdf/: monoped.urdf
robots/hyq/xpp_hyq_monoped_description/: CMakeLists.txt  package.xml
robots/hyq/xpp_hyq_monoped_description/meshes/leg/: lower_convex.dae
robots/hyq/xpp_hyq_monoped_description/urdf/: monoped.urdf
robots/hyq/xpp_vis_hyq/: CHANGELOG.rst  CMakeLists.txt  package.xml
robots/hyq/xpp_vis_hyq/include/xpp_vis_hyq/: biped_inverse_kinematics.h  hyq_inverse_kinematics.h  hyqleg_inverse_kinematics.h  inverse_kinematics_hyq1.h  inverse_kinematics_hyq2.h  inverse_kinematics_hyq4.h  joints_monoped.h  monoped_inverse_kinematics.h
robots/hyq/xpp_vis_hyq/launch/: launch_all_hyq_urdf_visualizers.launch  xpp_vis_hyq.launch
robots/hyq/xpp_vis_hyq/src/: biped_inverse_kinematics.cc  hyq_inverse_kinematics.cc  hyqleg_inverse_kinematics.cc  inverse_kinematics_hyq1.cc  inverse_kinematics_hyq2.cc  inverse_kinematics_hyq4.cc  monoped_inverse_kinematics.cc
robots/hyq/xpp_vis_hyq/src/exe/: urdf_visualizer_biped.cc  urdf_visualizer_hyq.cc  urdf_visualizer_hyq1.cc  urdf_visualizer_hyq2.cc  urdf_visualizer_hyq4.cc  urdf_visualizer_monoped.cc
robots/quadrotor_description/: CMakeLists.txt  package.xml
robots/quadrotor_description/launch/: quadrotor.launch
robots/quadrotor_description/urdf/: quadrotor.urdf
robots/xpp_anymal/: CMakeLists.txt  README.md  package.xml
robots/xpp_anymal/include/xpp_anymal/: anymalleg_inverse_kinematics.h  inverse_kinematics_anymal.h
robots/xpp_anymal/launch/: anymal.launch
robots/xpp_anymal/src/: anymalleg_inverse_kinematics.cc  inverse_kinematics_anymal.cc
robots/xpp_anymal/src/exe/: urdf_visualizer_anymal.cc
robots/xpp_anymal/urdf/: anymal.urdf
robots/xpp_hyq/: CHANGELOG.rst  CMakeLists.txt  package.xml
robots/xpp_hyq/include/xpp_hyq/: hyqleg_inverse_kinematics.h  inverse_kinematics_hyq1.h  inverse_kinematics_hyq2.h  inverse_kinematics_hyq4.h
robots/xpp_hyq/launch/: all.launch  biped.launch  hyq.launch  monoped.launch  start_hyq_vis.launch  xpp_hyq.launch
robots/xpp_hyq/meshes/trunk/: trunk.dae
robots/xpp_hyq/rviz/: xpp_hyq.rviz
robots/xpp_hyq/src/: hyqleg_inverse_kinematics.cc  inverse_kinematics_hyq1.cc  inverse_kinematics_hyq2.cc  inverse_kinematics_hyq4.cc
robots/xpp_hyq/src/exe/: urdf_visualizer_hyq1.cc  urdf_visualizer_hyq2.cc  urdf_visualizer_hyq4.cc
robots/xpp_hyq/urdf/: biped.urdf  hyq.urdf.xacro  leg.urdf.xacro  monoped.urdf  trunk.urdf.xacro
robots/xpp_quadrotor/: CHANGELOG.rst  CMakeLists.txt  package.xml
robots/xpp_quadrotor/launch/: quadrotor.launch
robots/xpp_quadrotor/src/exe/: urdf_visualizer_quadrotor.cc
robots/xpp_quadrotor/urdf/: quadrotor.urdf
xpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
xpp_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
xpp_examples/bags/: README.txt  biped.bag  hyq1.bag
xpp_examples/launch/: biped_bag.launch  biped_ex.launch  biped_gap.launch  hyq_bag.launch  hyq_ex.launch  monoped_bag.launch  monoped_ex_bag.launch  monoped_ex_generate.launch  monoped_generate.launch  quadrotor_ex.launch  quadrotor_generate.launch
xpp_examples/rviz/: xpp_biped.rviz  xpp_hyq.rviz  xpp_monoped.rviz  xpp_quadrotor.rviz
xpp_examples/src/: monoped_bag_builder.cc  monoped_pub.cc  quadrotor_bag_builder.cc
xpp_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
xpp_msgs/include/xpp_msgs/: topic_names.h
xpp_msgs/msg/: RobotParameters.msg  RobotStateCartesian.msg  RobotStateCartesianTrajectory.msg  RobotStateJoint.msg  State6d.msg  TerrainInfo.msg  UserCommand.msg
xpp_ros_conversions/: CHANGELOG.rst  CMakeLists.txt  package.xml
xpp_ros_conversions/include/xpp_ros_conversions/: convert.h  ros_conversions.h
xpp_states/: CHANGELOG.rst  CMakeLists.txt  package.xml
xpp_states/include/xpp_states/: cartesian_declarations.h  convert.h  endeffector_mappings.h  endeffectors.h  joints.h  robot_state_cartesian.h  robot_state_joint.h  state.h  terrain_types.h
xpp_states/src/: joints.cc  robot_state_cartesian.cc  robot_state_joint.cc  state.cc
xpp_vis/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
xpp_vis/demo/: monoped_bag_builder.cc  monoped_pub.cc
xpp_vis/include/xpp/: nlp_user_input_node.h
xpp_vis/include/xpp/biped/: biped_inverse_kinematics.h
xpp_vis/include/xpp/mono/: joints_monoped.h  monoped_inverse_kinematics.h
xpp_vis/include/xpp/quad/: hyq_inverse_kinematics.h
xpp_vis/include/xpp_vis/: a_inverse_kinematics.h  cartesian_joint_converter.h  inverse_kinematics.h  nlp_user_input_node.h  rviz_colors.h  rviz_robot_builder.h  rviz_terrain_builder.h  urdf_visualizer.h  user_interface.h
xpp_vis/include/xpp_vis/biped/: biped_inverse_kinematics.h  joints_biped.h
xpp_vis/include/xpp_vis/depr/: joints_quadruped.h
xpp_vis/include/xpp_vis/mono/: hyqleg_inverse_kinematics.h  joints_monoped.h  monoped_inverse_kinematics.h
xpp_vis/include/xpp_vis/quad/: hyq_inverse_kinematics.h
xpp_vis/launch/: xpp.launch  xpp_full.launch  xpp_vis.launch  xpp_visualization.launch
xpp_vis/rviz/: xpp.rviz  xpp_core.rviz  xpp_ext.rviz  xpp_full.rviz
xpp_vis/src/: biped_inverse_kinematics.cc  cartesian_joint_converter.cc  hyq_inverse_kinematics.cc  hyqleg_inverse_kinematics.cc  monoped_inverse_kinematics.cc  nlp_user_input_node.cc  rviz_marker_builder.cc  rviz_robot_builder.cc  rviz_terrain_builder.cc  urdf_visualizer.cc  user_interface.cc
xpp_vis/src/exe/: nlp_user_input_node_exe.cc  robot_state_publisher.cc  rosbag_traj_combiner.cc  rviz_marker_node.cc  urdf_visualizer_biped.cc  urdf_visualizer_hyq.cc  urdf_visualizer_monoped.cc  user_interface_node.cc
xpp_vis/src/exe/depr/: base_state_visualizer.cc  example_state_publisher.cc  initial_state_visualizer.cc
xpp_vis/test/: rviz_robot_builder_test.cc  utest.cc
(+156 files in other folders)
