<?xml version="1.0"?>

<package format="2">
  <name>xpp</name>
  <version>1.0.0</version>
  <description>Meta-package for the Xpp framework.</description>
  
  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xpp_states</exec_depend>
  <exec_depend>xpp_msgs</exec_depend>
  <exec_depend>xpp_ros_conversions</exec_depend>
  <exec_depend>xpp_vis</exec_depend>
  <exec_depend>xpp_hyq</exec_depend>
  <exec_depend>xpp_quadrotor</exec_depend>
  <exec_depend>xpp_examples</exec_depend>
  <export>
    <metapackage />
  </export>
</package>