<?xml version="1.0"?>

<package format="2">
  <name>xpp_examples</name>
  <version>0.1.0</version>
  <description>
    Examples of how to use the xpp framework.
  </description>
  
  <author email="alexander.w.winkler@gmail.com">Alexander W. Winkler</author>
  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>

  <depend>xpp_states</depend>
  <depend>xpp_msgs</depend>
  <depend>xpp_ros_conversions</depend>
  <depend>xpp_vis</depend>
  <depend>xpp_vis_hyq</depend>
</package>