<?xml version="1.0"?>

<package format="2">
  <name>xpp_examples</name>
  <version>1.0.10</version>
  <description>
    Examples of how to use the xpp framework.
  </description>
  
  <author>Alexander W. Winkler</author>
  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>xpp_vis</depend>
  <depend>xpp_hyq</depend>
  <depend>xpp_quadrotor</depend>
</package>