<?xml version="1.0"?>

<package format="2">
  <name>xpp_msgs</name>
  <version>1.0.10</version>
  <description>
    ROS messages used in the XPP framework.
  </description>
  
  <author>Alexander W. Winkler</author>
  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  
</package>