<?xml version="1.0"?>

<package format="2">
  <name>xpp_vis</name>
  <version>1.0.3</version>
  <description>
    Visualization for the XPP Motion Framework.
  </description>
  
  <author email="winklera@ethz.ch">Alexander W. Winkler</author>
  <maintainer email="winklera@ethz.ch">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>kdl_parser</depend>
  <depend>robot_state_publisher</depend>
  <depend>visualization_msgs</depend>

  <depend>xpp_states</depend>
  <depend>xpp_msgs</depend>
</package>
