<?xml version="1.0"?>

<package format="2">
  <name>quadrotor_description</name>
  <version>1.0.0</version>
  <description>
    The URDF file for a quadrotor.
  </description>
  
  <author email="alexander.w.winkler@gmail.com">Alexander W. Winkler</author>
  <maintainer email="alexander.w.winkler@gmail.com">Alexander W. Winkler</maintainer>
  <license>BSD</license>
  
  <url type="website">http://github.com/leggedrobotics/xpp</url>
  <url type="bugtracker">http://github.com/leggedrobotics/xpp/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>